# gourd

./: .gitignore  CMakeLists.txt  README.md
include/: canonical_hrf.h
include/gourd/: .#nearest_neighbor_process.hpp  cifti_xml.hpp  covariance.hpp  credible_band.hpp  eigen_map_cifti.hpp  gifti.hpp  loocv.hpp  nearest_neighbor_process.hpp  neighborhood_smooth.hpp  nifti2.hpp  nifti_data_type.hpp  nifti_uses_datatype.inl  options.hpp  output.hpp  output_log.hpp  pair_cifti_metric_with_gifti_surface.hpp  rng.hpp  surface_gpl_covariance.hpp  surface_gpl_model.hpp  surface_gpl_model2.hpp  surface_gpl_model_indepmomenta.hpp  surface_gplmix_model.hpp  surface_gplmix_model2.hpp  surface_gplmix_model3.hpp  surface_gplmm_model.hpp  surface_smoothed_glm.hpp  surface_vwise_glm.hpp  ud_surface_gplmix_model.hpp
include/gourd/cmd/: basic_command_parser.hpp  covest_command_parser.hpp  credband_command_parser.hpp  glm_command_parser.hpp
include/gourd/data/: gplm_basic_data.hpp  gplm_full_data.hpp  gplm_outcome_data.hpp  gplm_smoothed_sstat.hpp  gplm_sstat.hpp  gplmix_sstat.hpp
include/gourd/temp/: ITER01_surface_gplme_model.hpp  LITERAL_surface_gplme_model.hpp  gplm_data.hpp  indep-spatial-error_surface_gplmix_model.hpp  nearest_neighbor_process_ORIGINAL.hpp  random-intercept-and-spatial-variance_surface_gplmix_model.hpp  read_gifti_surface_image.hpp  surface_gplcov_model.hpp  surface_gplme_model.hpp  surface_gplmix_model_g=bvd_variant.hpp
include/gourd/utilities/: csv_reader.hpp  parse_indices_text.hpp  ragged_array.hpp  read_log_file.hpp
include/nifti/: gifti_xml.h
lib/abseil/: README.md
lib/abseil/include/: ansi.hpp
lib/abseil/include/abseil/: accumulator.hpp  assignment_problem.hpp  bessel.hpp  chebyshev.hpp  coordinates.hpp  covariance_functors.hpp  math.hpp  median.hpp  numderiv.hpp  quantile.hpp  timer.hpp  types.hpp
lib/abseil/include/abseil/coordinate_systems/: cartesian_coordinate.hpp  cartesian_coordinate_def.inl  coordinate_system.hpp  coordinates_def.inl  spherical_coordinate.hpp  spherical_coordinate_def.inl
lib/abseil/include/abseil/covariance/: covariance_functor_def.inl  matern_def.inl  radial_basis_def.inl  rational_quadratic_def.inl
lib/abseil/include/abseil/distributions/: standard_logistic.hpp  standard_logistic_def.inl  standard_normal.hpp  standard_normal_def.inl
lib/abseil/include/abseil/mcmc/: learning_rate.hpp
lib/abseil/include/abseil/tmp/num_recip/: bessel.hpp
lib/abseil/include/abseil/utilities/: csv_reader.hpp  fileio.hpp  progress_bar.hpp  string.hpp
lib/bobyqa/: CMakeLists.txt
lib/gifticlib-1.0.9/: CMakeLists.txt
lib/gifticlib-1.0.9/include/: gifti_io.h
lib/nifti/: CMakeLists.txt
lib/nifti/cifti/: CMakeLists.txt  afni_xml.h  afni_xml_io.h
lib/nifti/nifti2/: CMakeLists.txt
lib/nifti/nifticdf/: CMakeLists.txt
lib/nifti/niftilib/: CMakeLists.txt
lib/nifti/znzlib/: CMakeLists.txt
src/: CMakeLists.txt  cifti_info.cpp  cifti_xml.cpp  gourd_covest.cpp  gourd_credband.cpp  gourd_gplm.cpp  gourd_gplmix.cpp  gourd_gplmix_sans_omega.cpp  gourd_gplmmm.cpp  gourd_sglm.cpp  gourd_vwise_glm.cpp  hello_gourd.cpp
